<?xml version="1.0"?>
<package format="3">
  <name>lidar_camera_fusion_detection</name>
  <version>1.0.0</version>
  <description>A ROS2 package for lidar and camera fusion with detection, using C++.</description>

  <maintainer email="GAO-Zhenyang@outlook.com">Goghy</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>opencv</depend>
  <depend>yolo_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>


  <!-- Export section -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
